Fix collapsing empty dwd-col.

--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -101,6 +101,7 @@ p a
 
   .dwd-col
     float: left
+    min-height: 1em
     padding: 0 ($block-spacing / 2) 0 0
     width: 50%
 
